--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,42 +4,42 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:h4StNLxPIt3/2hdSAYOBlsPSXoZ1hgi81PGmDw4Jn8RXG+PXvJ5/AiQeYMgNGFN2RNhyCx7FC+/eMek45B7eM6Y=,iv:LCmAEpXuDF97Cxra9ADsCPgifiPjb4XQQB8e9AgGRxY=,tag:9j2cvw5v/XedC5O2X+mBhA==,type:comment]
-    #ENC[AES256_GCM,data:tlXxLuYBsFLZ2VJ9Nc7qySIxeGCfkxMjSuLSrpdzH+DDY8T/oDfLLGouGBw=,iv:4vYO6ObZA9gzACJl0MEg7iKny6YnsceKEmia1ybCynQ=,tag:KYQ74VC5/8BfJDXhJQwlnA==,type:comment]
-    VIP: ENC[AES256_GCM,data:YA7JMSTpl7oMF+mu6g==,iv:Og0gVCM1h7q0AgKp5sfwp3TVOzUFpQwkLeMY8bv23XM=,tag:9St3jVNInJFEq89xRUWy3g==,type:str]
-    #ENC[AES256_GCM,data:PBH/GAbz45InI4DGLXg9ChVPYg8nSfZe+k/b,iv:wHDrjCCIL6MoKiQl39kbSqWI7R7wkwICLekLRq21eZg=,tag:iRprnal4dVBMkC/kyyTt3g==,type:comment]
-    #ENC[AES256_GCM,data:JUEaZjhHs73xkTA1PiqqLl7VYpdWmit79BscAHxuTqcIXmBqYpzUl0pPVt/hUM8PucZbg/W323ERHMdVs0+oFOvgClz3uVo3JW4RP2L7jqgd0CDKzo58kCY=,iv:4sOdkYPMT00C0Hm5P5nlK89bXhdWqw5h1gfipiskYvw=,tag:w8lyBOFIloBzfb6aDFxdaA==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:uDOh5cReBb+bzouw1LY=,iv:ktjxLdlOYw3nk2idpAJuJzlYSfjetAi4WCSBiWIEAlA=,tag:pqBPhFI7/QCrGdwytJz83w==,type:str]
-    #ENC[AES256_GCM,data:IwdDhyL2XWWcGCzSwTeG3CaT2ThMh7yX2TqDRKj1eN3euA==,iv:Nd+o/uDW1P5m3+zb3r4o7oXStWr0fupDV5VbbKKVakI=,tag:+nLm60clX31Mz2Y9G7liww==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:neGdfveBeN2DMQkPrQ==,iv:5IRdqyUxub2ZooPKv+1595WWDwfK3M68czAOv8+zqmQ=,tag:zmmskpfLL780KWDPkeUFRA==,type:str]
-    #ENC[AES256_GCM,data:HnWtiCPhIRmO2QEg5YP+QxBpnl+1zio50nnjh/8EnOo0UFS11ttQhqw7+1AO6bM=,iv:SI0MPyItUzP57PsZUD2AES8E/xdqP4vuxlFkG3y/Mtw=,tag:zzrHi4mfWSigAbp/m8HkyA==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:Vlp/3lO+/geLgfOGFbHmgZMgKO4ko/BBLG3yQUiKJw==,iv:oeDRvdN/dElnbBzOA67aoVSRMyqIE7uxyi6nrBFtFsI=,tag:88IHaUTAqvHlduFy+VB/rg==,type:str]
-    #ENC[AES256_GCM,data:8yE5w/epMcCpzZfXDINfcTGkpEFMeCOepz8EF/a0sqG3Xn7R8kGtoObtqn0wqOozmh1tgPZb+zNlEVVpYk3LhjE2FC3Gtb7rxnnG5Qr8EgeA6w==,iv:gtbCG88tkg7JpspPTWBz3ABYIA68ytVrYa9174ZeTJQ=,tag:537Nrrf8GMP0Ar4kmoDt6A==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:cLMuGXStD+YKAtx8AUF0,iv:1O8E0o3TddTm+6AVolb6Hyk1AyIJmBHjbcZKob9cCMY=,tag:5Rgjix8vTLisIlCRLIL6lg==,type:str]
-    #ENC[AES256_GCM,data:K4ege9Liw08Kuw1keT7/eLOrIs3vs130d+JgVX2p3VRb,iv:rdgikoEIZr5xUS+A6AvAq1NdGcVnl76ivw7OvUFsEFc=,tag:/QtWneG/WRRCFy17hecl6Q==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:O1RQ1MJ5xrfC/MY7XbF8,iv:u/EramEp01ZWzjDn9Ffnp1Lo8LQakAMcJXhgZLknz2E=,tag:+ky0s0tHu6TE4WEKkwZSYw==,type:str]
-    #ENC[AES256_GCM,data:jDOp/hciBaZaFAIk/1DzHx3iehFhYQT6INC3Ni+9GbIXYvCKyXtyMwWgKO2V9o3VvB0Oeo0lN1R5McKvJooABiGgq1GRjuhPcVLAaGHut08=,iv:TPjoWfQFehU9Z/MERiNROiiQTm0cqw5EVtZuJQjjEds=,tag:iVsgf8PGnwfz3N//u8KI2A==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:9fVYfqEw/FK074rWeZvw,iv:geZ6YGzz+dYbYTk4+mZXLZW8DZmCUVbtEKxw70exPfQ=,tag:szKzXVXOD6wUcQIirISWDA==,type:str]
-    #ENC[AES256_GCM,data:h/++viFUMppNZ58xsigmhOvPJ2x+3hsD7NAINUbToH0SUxqM4/rXUH54Awin2SJUhvs4ijJN3GqrjUX/Pf1QEi60gpve/JxxEi//xdBn2uU+P2gcmH++,iv:4rDW4O3sBVAWUdHiX2layPMiK9L0O+uVGvMEqZl78x8=,tag:4EhnOHsMk1AYH1rJOKzabw==,type:comment]
-    #ENC[AES256_GCM,data:uIO9gkCB6ZocwowInLflSKSrMDbWoVWstW9m0sK4Xz25gPf9PORndTQBsAQ+ucYK6253qpW4M39xBEt7TuSx98XwGx48cO7/9gip4WfKmKrWWJaKQcEOVl/k6FYp1QRIUx1sWZZQ/v6C9vEuonRHWUcLU2ia+pe/Z7XOxg==,iv:PgWzGxaKlz+2PbTtX+aAVTAnoWzXGDZOzqshGuah/Eg=,tag:LknT9J4WfHCsRQbKp7ch/Q==,type:comment]
-    #ENC[AES256_GCM,data:lXVAnWdWTdd5sE04rQP23EIr89hv/5PQCVdbrcp9pzD5TaI99D4chIEJcbOYU/PhUIaJBV3AZZeSAnwwVLlI1GB/9OSGojmsxKoDdw1T/To=,iv:8j2cKNgmByFcyqUkgIvuoV5rrV4/yXfeV+WqdiX2C/4=,tag:OsEEyOWGmHKJQCicC6Iefg==,type:comment]
-    #ENC[AES256_GCM,data:68ggQaQXEI38pD+ckIoHfrd1S6j5QDaeor5xQdmFuG5OnMjp2RFt8hNgiLSXnC4l0Eh6pqxa,iv:HMtdrRevbXCKSvXwBNMaQTTVlklwzWOoa3Nt1Juzppo=,tag:EXcBHSq9I8ozIO/rfWn4RA==,type:comment]
-    DDNS_URL: ENC[AES256_GCM,data:xoRydR0vHtCwTIBchPM=,iv:WWwgrJfxVZmTJqt2ou/z44mc/fk3390qYEY2kdyfXQY=,tag:zb/AF99N/U39wGcG83tkzg==,type:str]
-    DOMAIN_0: ENC[AES256_GCM,data:oq7vtu4V9GHfWUiT,iv:r5dG76qzwiHu/lbSwRs6rj6OReo1yNBfBrUs7w1CfTY=,tag:a04HMOLGmCTUgMacU+vTdA==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:BnO3grLowiWZN4xWBZRSMmE=,iv:ephgT6Vil8W6odZ3DmAADBcRwm7RMm70uh6YCwVP/lo=,tag:XjtLnbkZDWdkJuSjUheMyQ==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:2blV4If/kD6AJwGIZHNwZBUrKa890Nw5u2KSHBdpBsLMSoAKFryFog==,iv:jor+PGtRipzsCFnHZVxJiC2R+A4pqeFKAgWEBK+hysE=,tag:Z5z7UPjLYeXeCeDkvjVErg==,type:str]
-    #ENC[AES256_GCM,data:HiSmRDvxll6hx+fuImiFw50ROwntarjm8t982hWP9xcK53sL0mXyb7yrG01MTKitk11kblneLdE=,iv:I4hVLPDg2yLH2w0OXfs9Owk/50Gdrfjer+HSr5uZ7rE=,tag:fs8f19Xaeu8t7V1BGe1/Gg==,type:comment]
-    #ENC[AES256_GCM,data:BN0AmyVXbjLLtUcgsNiHVfBoaPdoth/9fg==,iv:Fl5+Jn0JTaU5B1kxU8Fj26Ewshl6V7shKymUuDpYRtI=,tag:9NX6r9jOmHcWDxko7LgFtQ==,type:comment]
-    #ENC[AES256_GCM,data:8xh/VuQfqFUj4pLFKP3vYVBHbmQjKrtrLxcTONG1tfMo7fZ1xlvtIO4dtByBEVXp94OILxfXoNEb5j23meFO697BxALfMwx0FKXJmxA=,iv:X83hKhwh6ze8R9bx2YyF5o0/3l5waXA60KXkCzAYjsg=,tag:QPNd+XtiM3yL6hnQM1hFbg==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:NuCH8X+s1XffGM4jVBhuKW678csAMNOWBtFz77HSyBcviIOv1PHNq6j2wpYtLEBx,iv:xxtguktO06Rjumo1mXUVsvBiHooquGArEAV3QZAilMc=,tag:AhfQa7xUNCRCixGL6YUlKg==,type:str]
-    #ENC[AES256_GCM,data:c3lTOH24SJUdsssDf5Zrx/9t6OpjXPpTuOIwqiDkJkHnF0zF5t/rK8vDe2/XMwpaN0+PQ72YeVh55CIx4yBDDjDNuLPcKFE=,iv:XdE5M2q8ugsmsDktSqG3W9LMtvejGgIuj3bk6AwAW6Q=,tag:NXwAViTdFf0/sMtt5KeqxQ==,type:comment]
-    #ENC[AES256_GCM,data:774HgFPcpNSGT2UuBRJGlMqkyRg3U8/vux419p/0MmgI3CQLI7hRbgl+SdxM+Grrf3XLRPLm,iv:lBn55XO92SBexfWNuXabHr0sCDG3Cor8GerMancB6n8=,tag:jdGSqBqQmGiy8RNOjn+Y+g==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:2EibEBeV9Q==,iv:UjFnS8+3pcNqpcmIfb+wMsCKxFhn+hyADxsIv9xkiYU=,tag:tisMh8BimMG8PLxNT+7rwA==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:SHmVrlMwv2jZNA5qWOuUGcuNGXc=,iv:LuAmO/gTBYeFlXBstseIdAeri7j6L6gCfwPd+xy52mA=,tag:geng8U2Dd9Zy1E2IOdnQqQ==,type:str]
-    #ENC[AES256_GCM,data:nmNfp0bhHaEmNSdevtE=,iv:Wpnr2R5ZkSQPC4arMLtAZGL2Ai2VDjxOft64BmU305U=,tag:4bvW0gDp3A6ySRWpl9JvoA==,type:comment]
-    PODNET: ENC[AES256_GCM,data:zTKJrbxo9K0Kd+B4qw==,iv:uwsE0z+vnepfQlZk6vtx03J7GB1wLKlfLp1YK83fccU=,tag:cHYcWLdS0RwjNRlsfca/Qg==,type:str]
-    SVCNET: ENC[AES256_GCM,data:RzdZ3TNDnnUqhIncqg==,iv:0e5+mS6lsf70kaYgRMJpAhmIx/1JhoZomMwLWrWa5ek=,tag:O/HpWzFqsRtuGLVl+o9dFA==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:0qWPNA==,iv:AHCQRq9Kl8pw++3D9YMQsnRkUFUbr0N2WOpOIEukRPE=,tag:b9mNWUL5C30aS6U2Qnqiqw==,type:str]
+    #ENC[AES256_GCM,data:XvGUYuMXgTu7dzMxgBe+752AWFwYCPsb6Y5rrVaWUpPUxyc86LFuT4k/wTNa3aAtU2PPOrER2wz+sJ9Ya69TeEI=,iv:kWAZGDauaNxCJkuhAGJ8VnZ3bBzWg9saPREtWm3gcVs=,tag:HmCO588Rc/AQ55pB+DiOaw==,type:comment]
+    #ENC[AES256_GCM,data:SIVksTL8vFsjPSwt5LyfjQj35DNXTyjGS80jT2SjDqdmrCSqYVXvJYjKqCk=,iv:0UlLe1PJQoofDAynIlOxeluV+YolEq7s92o4PV1Or9U=,tag:3GZRRhrYwERa4NRU4kdxnw==,type:comment]
+    VIP: ENC[AES256_GCM,data:ndl3T/buwbeGy3KIeQ==,iv:FnpGf2U3tUjd7uhlaueLb30TTLzI/lm6MyusSyTp9ec=,tag:PYxaG5QbsKraAA9Cr++yzg==,type:str]
+    #ENC[AES256_GCM,data:jkhVA7+yEnKUEgK9ilf13QSiTjsEfM5HftnZ,iv:V9F98orpCq2Lh8Ikeaimtd2cU5SRhQO7nBVxsmOcViY=,tag:a981Beudt1nPuy9PDcZGHQ==,type:comment]
+    #ENC[AES256_GCM,data:591KGseywRBrX4rZR3Y64kpy6WpglaLrOw3raJFIvt3wT0+iNs4912mrvHA1uzfAjgZDTdBUzAUV97o9psTNb1h6LLec+5aL+vIPjJP5o5lgwNEdwEYeuSs=,iv:+zkyv1xix+6v5UXxqIyWba1n26pY5Nngr/wCGsAbxr4=,tag:kd34rNinV7SZBue+vfbbqw==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:Vr9aQfIbSXcZMM0Yack=,iv:aY13y5Hn99PjpLGd65+OzhZ03eY1DgpNGuo2uCDaGIs=,tag:Wr/izLE14TV3bYMj/glVyg==,type:str]
+    #ENC[AES256_GCM,data:ppL2WcrGQbm1SAW/HuQ1avYlekf/31JralNFA2xtLb5p3A==,iv:KFGzDXp7HATVBjJMwRBlmTjT3J6HjMunbxNO7+trsm0=,tag:laQedS4v27L/zEEJaRQKxw==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:XbpTxsMVKGHJ15+jXA==,iv:B1wzh2Ta5nG4n5dbroEsugDyBZ4G6LnryR/TmuFrMFs=,tag:XXk1AFPcWeulZUrcTABM0w==,type:str]
+    #ENC[AES256_GCM,data:iPhdAm8RU0G2eBRYe0NHvMikeXJVu8pMtU6vCo7VMigNNxUs4BgO6O1ScM51d/0=,iv:eSY5mVIHmbDnhaUshLYmY5wxeS+0WFbCf7EpL+LGdpw=,tag:r2iNgQXJ48iWrcUidgfWfw==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:mlcXKXFGUrK0WHsG0gclUVFhepGLis8Y5v7yzYGDRQ==,iv:7+mCQZsafis0vACb3OglpCLIwEYTfgGKIJcrqe2iw10=,tag:zUxhjl69RuRx806QfZNuqw==,type:str]
+    #ENC[AES256_GCM,data:bzefCnnkjE+y46z0YDUyNTanRddPwfVp09aa1KZQRdlKxFCA+XR5aOBEXTFI4pQHbdWoYuZP/FjUkitO1D6XTMAYvf3JQRGzUnvMYoRua1EWtQ==,iv:HtXcd9SnI5BfPso289+GvKwqUecjnOPwI8FLZ+kzn4U=,tag:C8ChntqLC88VJEA8xC3hbw==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:+zTOcgfvVY5k2JVdjR/U,iv:ku2NtEkNY9Y+SbzgW7bpPkzbya7iQmFyhpGcFK3y7dU=,tag:B7invz/dof/UAtQJetZfNw==,type:str]
+    #ENC[AES256_GCM,data:WgjQqwf/fLnOu91aeC3mZWq1N3i7N87i+FfrnnV+3Enm,iv:D9rrwboscKtu4DuxX11jWaIbgSuPx3KhtQ8P8RL/4cI=,tag:E85NLw5DxSwX3ZN9Qp92Kg==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:lA6EyydMzDwKKpz7hm6G,iv:tiw6lKeac9AfzUzVTk1ZrRep9IHcHkRoJf9hmtpBdRs=,tag:Imi76NvAZrlABJE396ySPQ==,type:str]
+    #ENC[AES256_GCM,data:nouez0K2SAy2N+DZZ1KhVjFvB+yFyoWoxOTmC7CCJlVOI92LfmxEE5fZLRk5PL6LBS14nrN8xOXltwogpklJFdqesr7u0tKcK8dJgYfEQTQ=,iv:hcO5bHQ2JJN0BG6F4cVhGwN0Y6cu7eZLaojwTguzeH4=,tag:pY62HPEir/rHR/F80EagvA==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:HcaYE0Ezzy2xggWmcoej,iv:X0ftkdcn8rP/hJkdhxmfP5Nmqc6yieGmYgtVxMaqiXw=,tag:9+Jnaw9FxNnySBZY/D7oPw==,type:str]
+    #ENC[AES256_GCM,data:8/NVKA95eZdfZdzX6oIu2fvihGHlb9iZBM9C2/ztquQRakQW5rjXLGiLPSy0aYxN2OZ4XoJJxzoQogI6Gy/zHfghy43cKr+pXUlTSRwV9hfPcPHdVngu,iv:fk0jD6TWpnrs8QY/Cx5nkrEFJHxa6It6hwtjOiSt0U0=,tag:J4Ap22iVMUrjJ1mDR5uHzA==,type:comment]
+    #ENC[AES256_GCM,data:QS7Dc8oXNn1tE1Lefip9KzBZfHHGkirblwtjGz/bs488JVTLE/SuwUuOW1jBWKzSdJ7hIl0YX8dsqFGRFinifLxOBBR2Jk21K0xkOj0dhWsW9oOiP23tPDBgUK0jSd/4VSjlMBgutMjePTF6i4a92/yA7IPriLpI824XPA==,iv:lo0l+4d+vjrMoLFM7DY+y/ttgU9Gt+5CIdVSybbQTrY=,tag:0shGWd7wFZU1qNCDvs5BCA==,type:comment]
+    #ENC[AES256_GCM,data:p3K7tYFhyiafOytWgrQpL/a7l+I//7FLSVH/OqIPgFfq6kbXFSl8klk7O0TGIp+VSC5O9+XJ/2xsmx4ChW9ljRXxwq61slW1J2CbXk4Fhrc=,iv:42EAwOSVCA4/SgPE6r9X1hs+8JFpnVLOmWBWar4IIGc=,tag:8IzqaJhV8O5SuubYGDehYw==,type:comment]
+    #ENC[AES256_GCM,data:mjSSwA7bvn0UH8Vv6PzzpnH67N/DbwNsQTus1IK60gTxE1c0DPc1aSeEuhG7d4GNc79uFaCC,iv:bbNN1yapgmF5a2jrzL3DZ04zNtlXRJ9HXZBdwtpWjKg=,tag:w6D3CA2TRMsi7yVFf3hqzA==,type:comment]
+    DDNS_URL: ENC[AES256_GCM,data:FVr/uav0F3YxC71IxPg=,iv:Ww5cXT50FimFEdVr+bBO3JNAE6QfUcUe0qcG+NANTT0=,tag:1+n1xMRJhX8HvwxntzNkJw==,type:str]
+    DOMAIN_0: ENC[AES256_GCM,data:8UpSP37Dypvhwk6Y,iv:W2OOSSUz/1hfdlj4GasUJ9pR66W5LmSdQbbMwD0VmPg=,tag:2oSvdDDy+qFtwRSf1njkSA==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:YbBvhB+3uBbIVjsF46m7xQY=,iv:y4lN5J6KOjU0juSrTdZQmjj53vQiMdvIlldK2XufU6w=,tag:XN9woyaLndM4aDCONCra0A==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:cOY4jukd0Lk5DAo8mGaxqM4tJnctO0N2nc/X4NlW2tr1ZTs0cj28hw==,iv:3h3T7UdxsUtRufocptD+oPKe8gCVqF27MecgZ7nYcTc=,tag:/dGUvLeiAsqJ3P/EqpACyA==,type:str]
+    #ENC[AES256_GCM,data:4w82+Q87Ye+bAn+GluJ4ioT6yJyWyxHvQ3U7n9f1p+c0uxdQRQ8C5X+ihHvyuPSARAKtJrUa80Q=,iv:NI0nPrTj2G/YJwSNDTSXswy7L74VbjzfIVZ0HYtmAP0=,tag:Ln+oK6826i4wlHqIML/+Gg==,type:comment]
+    #ENC[AES256_GCM,data:G7hV24gl0nLmc4Ohra1PsO590QHOj12qxg==,iv:kVDbBxBF6Dh1n/r6YweGQbd3SZSfeO9N3JOqjDq3FqA=,tag:JfGD5S0JfEYsDZnDz/1jeQ==,type:comment]
+    #ENC[AES256_GCM,data:lDLzGbJEZH/gwHSTVMWgDiXCSb1ZNJIqgrKb4h428vdfBtMNQrMj0NP77nVbokOzVzPgc/6mBNGh41tBQs/jvvHD/y4mneO0p99AsME=,iv:NF1p+D9M08n3HiwtsOFo+7sJvrjRVPkEwuMBjwnznZs=,tag:kJULab2BmmD/h9j1U/Tdug==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:9QUji6Ra26Uf0ITzEBFpZIFIwJNXCuRyeQwQz1INOPT3DDLQlQNDexWTl/JGowwY,iv:PoZfIpGWyPLOPOBW6D5zLYWFLsN/rhozfeTm7HP5Tho=,tag:4kB6ubbm5E2jvWcMtG/1rw==,type:str]
+    #ENC[AES256_GCM,data:sZCPPVVIBuR8O1+E6HxGxZcqp6Rs7XcDBcvX99m2XRuGqcwNmO7URRPR6axkdtduq8Fh1NlwcknY1RPbLOfLseyZMNYHMfw=,iv:wobPW2aIDTsbs1tmNlgcBfBgQX3eVZy1AWcB7FqzIHg=,tag:lO5kRzXAiwJo0WwLszj9Gw==,type:comment]
+    #ENC[AES256_GCM,data:B3wHXhIgOgqj7asmP16w/4GTKAmwjMPsShfCBP/nVvLwxdVphhD+2cKrUGeM8CVH6xK8dlP6,iv:atp8QU9Lmi8DRGD+gu26MScoa40yVPt592t6SXdBKQU=,tag:sl/roKKJF8ayhtoAgwqK+Q==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:FdJEpg0OSQ==,iv:qcajmfZM8eGjDhFfv44I3iQxRkJDCyiB/rc5e0IpVvo=,tag:kVtY8jCAYiIdrW8Q/a0dAw==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Cd5BikrZjeVVEe/A8hWfHnv58Eo=,iv:Y0ert8QM0Qukn5UQP9ayDilphVzh3a4WHNco+rtSFjU=,tag:wTgbAwM1PerNL4yZ0EDP9A==,type:str]
+    #ENC[AES256_GCM,data:gbGa+IfYWXKKjDexZkU=,iv:cP1DWzFbeeMWbtI2OoupDssNv7UfnBr+ilnoAe/StHo=,tag:87dD9dspnRiqWacU4YfTtA==,type:comment]
+    PODNET: ENC[AES256_GCM,data:n+toLub9oQ/vT9Bztg==,iv:+mE4R1NYrY6Llrr3OmaZIIh6QDWDWsS8vxxKVkZoG8I=,tag:ptBaXRkQPZHY3jANesDjuA==,type:str]
+    SVCNET: ENC[AES256_GCM,data:OxzDbyBV7qjGVc0NuA==,iv:NdHJscnIg7T0AsKktSk567hpXqA+qOVqRlj+VotPwbI=,tag:0820mMvFQ5meTI7M8cNQ4A==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:GSLkQA==,iv:ctpwLVNmawMiuxZYbrkZZOuc/i/2nY1qXExZshy1MF8=,tag:OU7Ft6DfCLooed4FWFh7SA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,14 +50,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwallwQ3FybWVaOFdWNm4x
-            YnFETzB1cnFPekpwLzdQMGdVWUNLaFFqalhZCk5aWTZVdXpLUHJaa01hY3VRTkNQ
-            cnQzUndMejJHeHZyREVjV3dKZXlkZWcKLS0tIEVrNU9Mb1lWQU95d096TzNGVGw0
-            MXE5Z3MxUjJSWUdjVXFvK3MwNjRSWGcKAwcxOkUp07CkxwYgblO7DGmR9Pc/hSzm
-            ZHOidc4g9dhuz6Mxzp5EL4nOyMCIwhr3eRsI8U2jkRpsTIpVlHGS7Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByUFYza3ozWWFkd2ZqbFdn
+            eHVnOGpFVVZkc1QwaW03K2ZqVXpGdkhaQVRrCkxNNDIvTC9aWXlrM3JVanI3REhJ
+            QWdEZzF3MlVYczRlQ1d0RS9qSDQ0NlUKLS0tIGNnM3VsbTI3a29yekFucFN3R1dp
+            Q0o4Rit4WXlZVnhEUXpSM1hCdmg5bGMKa0gNVxnk6v77niHi/isel8JFfC5mCKH4
+            HKl+l9AMo12Vkjeyco0wfw3ZFZDGcp+SmRV+WVwqchbjK3qqug6VbQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-25T15:40:22Z"
-    mac: ENC[AES256_GCM,data:Nv20ln2j6+RfvcRWME3T/z8FdjaQOsmXfNPOkwh7bf+30MBkU7RGd9TTgFIDvg4yuRMpf3V8XU2kWv2iL8o51SG8dS5+I8zoWWfRfjAFXvdAoL9Xc3r3K56z0laDOTiT2IDp2h8+rnx3PCPuxkk2tR5Hs8Tt3DrLvTYsXaRSyOc=,iv:m7FXWDljAyoZCroIEkRrveB2rBpnCAsiogbkocqxBPo=,tag:iUaF5xHe7IEFYhhP2GN8fg==,type:str]
+    lastmodified: "2024-12-25T15:47:32Z"
+    mac: ENC[AES256_GCM,data:gjN7T0UBqlZRe+ODKbQYxQIIxrVa3C4NEBzLemzON2LKqKPqT0K8I6xsLhYZSQdEFxHc/DQqw/oSnaHCNI8zCmU4e6CZjwpRkq7QH+UjkXaoWbwxcnuiQb1R1m5HvkZ4VAirgNvH+xq3tjqYXYlg+FUPVA6atQ7rMgs9OAqgSPI=,iv:2PHv6WN+Uo/cspkDsuM2nZwCDyeVKz+PWC+KESrDO7Q=,tag:bXaEHzYARrvzsI+CskSy3w==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
